force-app/main/default/objects/Vendor_Program__c/Vendor_Program__c.object-meta.xml
<CustomObject>
    <description>Discount or Awards Programs that vendors can subscribe to. For Example Vendor Vantage.</description>
    <label>Vendor Program</label>
    <nameField>
        <label>Vendor Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>