force-app/main/default/objects/Vendor_Program__c/fields/Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Active_Flag__c</fullName>
    <formula>AND( TODAY() &gt;=   Active_Date__c ,  TODAY() &lt;= Expiration_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Flag</label>
    <type>Checkbox</type>
</CustomField>