force-app/main/default/objects/Vendor_Program__c/fields/Preferred_Flag__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the is the preferred vendor program</description>
    <label>Preferred Flag</label>
    <type>Checkbox</type>
</CustomField>